--- a/.yamato/vikingvillage_urp-android-opengles3.yml
+++ b/.yamato/vikingvillage_urp-android-opengles3.yml
@@ -15,8 +15,8 @@ VikingVillage_URP_Android_OpenGLES3_performance_playmode_runtime_il2cpp_Linear_t
         flavor: b1.large
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
-        VV_URP_BRANCH: master
-        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
+        VV_URP_BRANCH: urp-test
+        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -48,8 +48,8 @@ Build_VikingVillage_URP_Android_OpenGLES3_performance_playmode_runtime_il2cpp_Li
         flavor: b1.large
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
-        VV_URP_BRANCH: master
-        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
+        VV_URP_BRANCH: urp-test
+        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -100,8 +100,8 @@ VikingVillage_URP_Android_OpenGLES3_performance_build_editmode_il2cpp_Linear_tru
         flavor: b1.large
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
-        VV_URP_BRANCH: master
-        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
+        VV_URP_BRANCH: urp-test
+        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -150,8 +150,8 @@ VikingVillage_URP_Android_OpenGLES3_performance_playmode_runtime_il2cpp_Linear_C
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
-        VV_URP_BRANCH: master
-        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
+        VV_URP_BRANCH: urp-test
+        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -186,8 +186,8 @@ Build_VikingVillage_URP_Android_OpenGLES3_performance_playmode_runtime_il2cpp_Li
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
-        VV_URP_BRANCH: master
-        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
+        VV_URP_BRANCH: urp-test
+        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -242,8 +242,8 @@ VikingVillage_URP_Android_OpenGLES3_performance_build_editmode_il2cpp_Linear_CUS
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
-        VV_URP_BRANCH: master
-        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
+        VV_URP_BRANCH: urp-test
+        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
