--- a/.yamato/vikingvillage_urp-iphone-metal.yml
+++ b/.yamato/vikingvillage_urp-iphone-metal.yml
@@ -15,8 +15,8 @@ VikingVillage_URP_iPhone_Metal_performance_playmode_runtime_il2cpp_Linear_trunk:
         flavor: b1.medium
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
-        VV_URP_BRANCH: master
-        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
+        VV_URP_BRANCH: urp-test
+        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -41,8 +41,8 @@ Build_VikingVillage_URP_iPhone_Metal_performance_playmode_runtime_il2cpp_Linear_
         flavor: b1.large
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
-        VV_URP_BRANCH: master
-        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
+        VV_URP_BRANCH: urp-test
+        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -89,8 +89,8 @@ VikingVillage_URP_iPhone_Metal_performance_build_editmode_il2cpp_Linear_trunk:
         flavor: b1.large
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
-        VV_URP_BRANCH: master
-        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
+        VV_URP_BRANCH: urp-test
+        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -136,8 +136,8 @@ VikingVillage_URP_iPhone_Metal_performance_playmode_runtime_il2cpp_Linear_CUSTOM
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
-        VV_URP_BRANCH: master
-        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
+        VV_URP_BRANCH: urp-test
+        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -165,8 +165,8 @@ Build_VikingVillage_URP_iPhone_Metal_performance_playmode_runtime_il2cpp_Linear_
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
-        VV_URP_BRANCH: master
-        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
+        VV_URP_BRANCH: urp-test
+        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -217,8 +217,8 @@ VikingVillage_URP_iPhone_Metal_performance_build_editmode_il2cpp_Linear_CUSTOM-R
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
-        VV_URP_BRANCH: master
-        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
+        VV_URP_BRANCH: urp-test
+        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
